# manga-status-scrapper

./: .gitignore  db.sql  main.py  params.toml  pyproject.toml
database/: base.db
source/: config.py  scroop_core.py  server_core.py
source/API_routes/: __init__.py  example.py
source/DB/: BaseDBManager.py  SQLiteManager.py  __init__.py
source/data_classes/: ScrapResult.py  ScrapingHistory.py  ScrapingInstance.py  ScrapingScript.py  __init__.py
source/dataclasses/: BaseDataclass.py  ScrapResult.py
source/helpers/: Params.py  ScrapperHelpers.py  Singleton.py  debug_helper.py
source/scrapping_classes/: BasicScrapper.py  ManhuasScrapper.py  TestScrapper.py  __init__.py
