[project]
name = "manga-status-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromium>=0.0.0",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
