[project]
name = "manga-status-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromium>=0.0.0",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
    "mypy>=1.17.1",
    "types-toml>=0.10.8.20240310",
]
